tests/invalid/if_fit_requires_is_condition.wio
fn Entry(args: string[]) -> i32 {
    if (true fit typed) {
        return 1;
    }

    return 0;
}
